syntax = "proto3";

package proto;
option go_package = "P:/blog-web/pb";  

service AuthService {
    rpc Register(RegisterRequest) returns (RegisterResponse);
    rpc Login(LoginRequest) returns (LoginResponse);
}

message RegisterRequest {
    string username = 1;
    string email = 2;
    string password = 3;
    string created_at = 4;
    int32 no_of_blogs = 5;
    int32 followers = 6;
}

message RegisterResponse {
    string message = 1;
    string user_id = 2;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string message = 1;
    string user_id = 2;
}